force-app/main/default/objects/AgileTeamMember__c/AgileTeamMember__c.object-meta.xml
<CustomObject>
    <label>Membro do Time</label>
    <nameField>
        <label>Nome de Membro do Time</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membros do Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>