force-app/main/default/objects/AgileTeamMember__c/fields/AgileResource__c.field-meta.xml
<CustomField>
    <fullName>AgileResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso</label>
    <referenceTo>AgileResource__c</referenceTo>
    <relationshipLabel>Membros do Time</relationshipLabel>
    <relationshipName>Membros_do_Time</relationshipName>
    <type>Lookup</type>
</CustomField>