force-app/main/default/objects/AgileTeamMember__c/fields/AgileTeam__c.field-meta.xml
<CustomField>
    <fullName>AgileTeam__c</fullName>
    <label>Time</label>
    <referenceTo>AgileTeam__c</referenceTo>
    <relationshipLabel>Membros do Time</relationshipLabel>
    <relationshipName>Membros_do_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>