force-app/main/default/objects/AgileTeamMember__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Alocação</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>