force-app/main/default/objects/AgileTeamMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Função</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FunctionAgile</valueSetName>
    </valueSet>
</CustomField>